[package]
name = "grpexec"
version = "0.1.0"
authors = ["Peter Gerber <peter@arbitrary.ch>"]

[dependencies]
clippy = { version = "*", optional = true }
derive-error = "0.0"
env_logger = "0.5"
libc = "0.2"
log = "0.4"

[profile.release]
overflow-checks = true

[[bin]]
name = "grpexec"
path = "src/main.rs"
